Update menu nav items

--- a/config.toml
+++ b/config.toml
@@ -66,14 +66,10 @@ pygmentsStyle = "pygments"
     url = "/"
     weight = 1
   [[menu.nav]]
-    name = "Tags"
-    url = "/tags/"
+    name = "Projects"
+    url = "/projects/"
     weight = 2
   [[menu.nav]]
     name = "About"
     url = "/about/"
     weight = 3
-  [[menu.nav]]
-    name = "RSS"
-    url = "/index.xml"
-    weight = 4
