--- a/netlify.toml
+++ b/netlify.toml
@@ -1,30 +1,39 @@
-    [build]
-    publish = "public"
-    command = "hugo --gc --minify"
+[build]
+publish = "exampleSite/public"
+command = "cd exampleSite && hugo --gc --themesDir ../.."
 
-    [context.production.environment]
-    HUGO_VERSION = "0.65.3"
-    HUGO_ENV = "production"
-    HUGO_ENABLEGITINFO = "true"
+[build]
+publish = "exampleSite/public"
+command = "cd exampleSite && hugo --gc --themesDir ../.."
 
-    [context.split1]
-    command = "hugo --gc --minify --enableGitInfo"
+[build.environment]
+HUGO_VERSION = "0.58.3"
+HUGO_THEME = "repo"
+HUGO_BASEURL = "https://cayman-hugo-theme.netlify.com/"
 
-    [context.split1.environment]
-    HUGO_VERSION = "0.65.3"
-    HUGO_ENV = "production"
+[context.production.environment]
+HUGO_VERSION = "0.65.3"
+HUGO_ENV = "production"
+HUGO_ENABLEGITINFO = "true"
 
-    [context.deploy-preview]
-    command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
+[context.split1]
+command = "hugo --gc --minify --enableGitInfo"
 
-    [context.deploy-preview.environment]
-    HUGO_VERSION = "0.65.3"
+[context.split1.environment]
+HUGO_VERSION = "0.65.3"
+HUGO_ENV = "production"
 
-    [context.branch-deploy]
-    command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
+[context.deploy-preview]
+command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 
-    [context.branch-deploy.environment]
-    HUGO_VERSION = "0.65.3"
+[context.deploy-preview.environment]
+HUGO_VERSION = "0.65.3"
 
-    [context.next.environment]
-    HUGO_ENABLEGITINFO = "true"
+[context.branch-deploy]
+command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
+
+[context.branch-deploy.environment]
+HUGO_VERSION = "0.65.3"
+
+[context.next.environment]
+HUGO_ENABLEGITINFO = "true"
