--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,6 @@
 [build]
-publish = "exampleSite/public"
-command = "cd exampleSite && hugo --gc --themesDir ../.."
-
-[build.environment]
-HUGO_VERSION = "0.58.3"
-HUGO_THEME = "repo"
-HUGO_BASEURL = "https://cayman-hugo-theme.netlify.com/"
+publish = "public"
+command = "hugo --gc --minify"
 
 [context.production.environment]
 HUGO_VERSION = "0.65.3"
