Try to get CSS to display on Netlify by removing baseURL from config.toml

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://hakeem-almidan.com"
+# baseURL = "hakeem-almidan.netlify.com"
 languageCode = "en-us"
 defaultContentLanguage = "en"
 title = "Hakeem Almidan"
