--- a/config.toml
+++ b/config.toml
@@ -27,7 +27,7 @@ pygmentsStyle = "pygments"
 
   # Date format for post list and single pages
   # For more date formats see https://gohugo.io/functions/format/
-  dateFormat = "2006-01-02"
+  dateFormat = "Jan 2006"
 
   # Footer text, can be markdown
   footer = ""
