--- a/config.toml
+++ b/config.toml
@@ -9,11 +9,6 @@ paginate = 10
 paginatePath = "page"
 rssLimit = 20
 
-[author]
-name = "Hakeem Almidan"
-url = "http://hakeem-almidan.com/"
-avatar = "path/to/some-image.jpg"
-
 [outputFormats.SearchIndex]
 mediaType = "application/json"
 baseName = "searchindex"
@@ -25,17 +20,15 @@ home = [ "HTML", "RSS", "JSON", "SearchIndex" ]
 section = [ "HTML", "RSS", "JSON" ]
 
 [params]
-contact = "info@example.org"
+contact = "hakeemmidan@gmail.com"
 copyright = "<!--Creative Commons License-->This site is licensed under a [Creative Commons Attribution-ShareAlike 4.0 International License](https://creativecommons.org/licenses/by-sa/4.0/).<!--/Creative Commons License-->"
 description = "The zen theme for Hugo example site."
 dateformat = "2 January, 2006"
-favicon = "apple-touch-icon.png"
 feedlinks = true
-footer = "Powered by [Hugo](https://gohugo.io/) and the [Zen theme](https://github.com/frjo/hugo-theme-zen)."
+favicon = "apple-touch-icon.png"
 icon = "apple-touch-icon.png"
 image = "apple-touch-icon.png"
 imageMaxWidth = 400
-mobileMenu = true
 poweredby = false
 sidebar = true
-submitted = true
+
