style + change logo

--- a/config.toml
+++ b/config.toml
@@ -26,9 +26,10 @@ copyright = "<!--Creative Commons License-->This site is licensed under a [Creat
 description = "The zen theme for Hugo example site."
 dateformat = "2 January, 2006"
 feedlinks = true
-favicon = "apple-touch-icon.png"
-icon = "apple-touch-icon.png"
-image = "apple-touch-icon.png"
+realfavicongenerator = true
+favicon = "static/apple-touch-icon.png"
+icon = "static/apple-touch-icon.png"
+image = "static/apple-touch-icon.png"
 imageMaxWidth = 400
 poweredby = false
 sidebar = true
